--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pytimeparse~=1.1.8
 firebase-admin~=6.1.0
-flask~=2.3.2
-requests~=2.30.0
+flask~=3.0.3
+requests~=2.31.0
 octorest~=0.4
 netifaces~=0.11.0
 opencv-python~=4.9.0.80
 Flask-HTTPAuth~=4.8.0
+pyserial~=3.5
